I am done. I am going to spend any remaining time, further condensing and refactoring the code.

--- a/about.html
+++ b/about.html
@@ -18,12 +18,11 @@
                 <div class="inner banner_about">
                     <!-- Nav -->
                     <nav class="nav">
-                        <!-- <img src="" alt=""> Add gradient of the base blue color  -->
                         <a href="index.html" class="font-logo">Bookr</a>
                         <ul>
                             <li><a href="#">About</a></li>
-                            <li><a href="#">Sign In</a></li>
-                            <li><a href="#">Sign Up</a></li>
+                            <li><a href="https://sunilbookr.netlify.com/">Sign In</a></li>
+                            <li><a href="https://sunilbookr.netlify.com/signup">Sign Up</a></li>
                         </ul>
                     </nav>
                     <div>
@@ -31,13 +30,10 @@
                     </div>
                     <section class="header-content">
                         <div class="h-top">
-                            <h1>Meet the team</h1>
-                            <p>
-
-                            </p>
+                            <h1>A strong team working to make the future of education accessible to all.</h1>
                         </div>
                         <div class="h-bottom">
-                            <button>Sign up!</button>
+                            <button href="https://sunilbookr.netlify.com/"> <button>Sign up!</button></button>
                         </div>
                     </section>
                 </div>
@@ -50,15 +46,11 @@
                 <div class="tabs-links">
                     <div class="tabs-link tabs-link-selected" data-tab="1">UX</div>
                     <div class="tabs-link" data-tab="2">UI</div>
-                    <div class="tabs-link" data-tab="3">FontEnd</div>
+                    <div class="tabs-link" data-tab="3">FrontEnd</div>
                     <div class="tabs-link" data-tab="4">BackEnd</div>
                     <div class="tabs-link" data-tab="5">TeamLead</div>
                 </div>
                 <div class="tabs-items">
-
-
-
-
                     <div class="tabs-item tabs-item-selected" data-tab="1">
                         <div class="tabs-item-title"></div>
                         <div class="tabs-item-description">
@@ -95,12 +87,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
-
-
                     <div class="tabs-item" data-tab="2">
                         <div class="tabs-item-title"></div>
                         <div class="tabs-item-description">
@@ -112,6 +98,17 @@
                                     <div>
                                         <h3>Timothy McGowen</h3>
                                         <h2>User Interface</h2>
+                                        <section class="social-card-tabs">
+                                            <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg"
+                                                    alt="" />
+                                            </a>
+                                            <a href="#" class="social-icons"><img src="assets/img/facebook.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg"
+                                                    alt="" /></a>
+                                        </section>
                                     </div>
                                 </div>
                                 <div>
@@ -134,6 +131,17 @@
                                     <div>
                                         <h3>Ya'Kuana Davis</h3>
                                         <h2>User Interface</h2>
+                                        <section class="social-card-tabs">
+                                            <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg"
+                                                    alt="" />
+                                            </a>
+                                            <a href="#" class="social-icons"><img src="assets/img/facebook.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg"
+                                                    alt="" /></a>
+                                        </section>
                                     </div>
                                 </div>
                                 <div>
@@ -154,6 +162,17 @@
                                         <h3>Colin de Vries</h3>
                                         <h2>User Interface
                                         </h2>
+                                        <section class="social-card-tabs">
+                                            <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg"
+                                                    alt="" />
+                                            </a>
+                                            <a href="#" class="social-icons"><img src="assets/img/facebook.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg"
+                                                    alt="" /></a>
+                                        </section>
                                     </div>
                                 </div>
                                 <div>
@@ -167,12 +186,6 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
-
-
                     <div class="tabs-item" data-tab="3">
                         <div class="tabs-item-title"></div>
                         <div class="tabs-item-description">
@@ -184,13 +197,27 @@
                                     <div>
                                         <h3>Timileyin Ojo</h3>
                                         <h2>Front End Developer</h2>
+                                        <section class="social-card-tabs">
+                                            <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg"
+                                                    alt="" />
+                                            </a>
+                                            <a href="#" class="social-icons"><img src="assets/img/facebook.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg"
+                                                    alt="" /></a>
+                                        </section>
                                     </div>
                                 </div>
                                 <div>
                                     <p>
-                                        Before I found Bookr, I had to read through every textbook the
-                                        district selected myself. Now I can look up my book on the app
-                                        before I even have to crack the spine!
+                                        I worked with the UX designer and the Back End Developer to get the required API
+                                        endpoints and data. I was responsible for creating a react App Bookr. Bookr
+                                        offers the service of reviewing a text-book which in turn helps people in search
+                                        of a textbook to decide on the book to buy. You have the ability to register on
+                                        Bookr and login to review a book. Registration is required to access the Bookr
+                                        app.
 
                                     </p>
                                 </div>
@@ -203,8 +230,20 @@
                                             alt="" />
                                     </div>
                                     <div>
-                                        <h3>Mari K.</h3>
-                                        <h2>5th Grade Teacher</h2>
+                                        <h3>Sunil Karki</h3>
+                                        <h2>Font End Developer</h2>
+                                        <section class="social-card-tabs">
+                                            <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg"
+                                                    alt="" />
+                                            </a>
+                                            <a href="#" class="social-icons"><img src="assets/img/facebook.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg"
+                                                    alt="" /></a>
+                                            <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg"
+                                                    alt="" /></a>
+                                        </section>
+
                                     </div>
                                 </div>
                                 <div>
@@ -232,13 +271,29 @@
                                 <div>
                                     <h3>Arron Marshall</h3>
                                     <h2>Back End Developer</h2>
+                                    <section class="social-card-tabs">
+                                        <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg"
+                                                alt="" />
+                                        </a>
+                                        <a href="#" class="social-icons"><img src="assets/img/facebook.svg"
+                                                alt="" /></a>
+                                        <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg"
+                                                alt="" /></a>
+                                        <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg"
+                                                alt="" /></a>
+                                    </section>
                                 </div>
                             </div>
                             <div>
                                 <p>
-                                    Before I found Bookr, I had to read through every textbook the
-                                    district selected myself. Now I can look up my book on the app
-                                    before I even have to crack the spine!
+                                    Working with our front-end architects, Oluwatimileyin (Tim) Ojo and Sunil Karki, I
+                                    was able to build back-end API endpoints that meet the application functionality
+                                    requirements.
+
+                                    I am using dynamic data from Google Books API to seed based on category queries,
+                                    with knex models to manage data access in SQLite and Postgres. Using apidocs and
+                                    jest I have also been able to fully document and test the API endpoints for a more
+                                    stable production build.
                                 </p>
                             </div>
                         </div>
@@ -255,6 +310,17 @@
                                 <div>
                                     <h3>Nick Batmanglidj</h3>
                                     <h2>Team Leader</h2>
+                                    <section class="social-card-tabs">
+                                        <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg"
+                                                alt="" />
+                                        </a>
+                                        <a href="#" class="social-icons"><img src="assets/img/facebook.svg"
+                                                alt="" /></a>
+                                        <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg"
+                                                alt="" /></a>
+                                        <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg"
+                                                alt="" /></a>
+                                    </section>
                                 </div>
                             </div>
                             <div>
@@ -267,21 +333,8 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
-
-
-
-        <!-- Footer -->
-        <!-- <section class="social-card">
-            <a href="#" class="social-icons"><img src="assets/img/twitter-brands.svg" alt="" />
-            </a>
-            <a href="#" class="social-icons"><img src="assets/img/facebook.svg" alt="" /></a>
-            <a href="#" class="social-icons"><img src="assets/img/instagram-brands.svg" alt="" /></a>
-            <a href="#" class="social-icons"><img src="assets/img/pinterest-brands.svg" alt="" /></a>
-        </section> -->
-
         <!-- Copyright -->
         <div class="black_line_footer"></div>
         <section class="copyright">
@@ -292,11 +345,8 @@
             </p>
         </section>
     </div>
-
     <!-- Scripts -->
     <script defer="defer" src="JavaScript/Tabs.js"></script>
-    <script src="#"></script>
-    <script src="#"></script>
 </body>
 
 </html>
