--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <a href="#" class="font-logo">Bookr</a>
             <ul>
               <li><a href="about.html">About</a></li>
-              <li><a href="#">Sign In</a></li>
-              <li><a href="#">Sign Up</a></li>
+              <li><a href="https://sunilbookr.netlify.com/">Sign In</a></li>
+              <li><a href="https://sunilbookr.netlify.com/signup">Sign Up</a></li>
             </ul>
           </nav>
           <div>
@@ -38,7 +38,7 @@
               </p>
             </div>
             <div class="h-bottom">
-              <button>Sign up!</button>
+              <a href="https://sunilbookr.netlify.com/signup"><button>Sign up!</button></a>
             </div>
           </section>
         </div>
@@ -179,7 +179,7 @@
           Create an account and never miss the next big book in education
           again!
         </p>
-        <button>Sign Up for free</button>
+        <a href="https://sunilbookr.netlify.com/signup"><button>Sign Up for free</button></a>
       </section>
     </section>
 
